...
        backgroundColor = MaterialTheme.colors.primary,
        navigationIcon = navigationIcon,
        actions = {
            if(showCartIcon && isMainScreen){
                IconButton(onClick = {
                    navController.navigate(Screen.ShoppingCartScreen.route)},
                modifier = Modifier.testTag("CartIcon")) {
                    Icon(imageVector = Icons.Default.ShoppingCart, contentDescription = "Shopping Cart")
                }
            }
        }
    )
}
...
