...
        }
    }
    val categoryUiState = viewModel.categoryUiState.collectAsState()
    LazyVerticalGrid(
        columns = GridCells.Adaptive(minSize = 150.dp),
        modifier = Modifier
            .testTag("CategoryDetailsColumn")
    ) {
        if(categoryUiState.value.products == null) return@LazyVerticalGrid
        items(categoryUiState.value.products!!) { photo ->
            ProductItemContainer(photo, navController, viewModel)
        }
    }
...
