...
        if(navController.currentBackStackEntry?.destination?.route != Screen.MainScreen.route) {
            navController.popBackStack()
        }
    }

    LazyColumn(
        modifier = Modifier.fillMaxSize().testTag("ShoppingCartColumn")
    ) {
        if(shoppingCartResult.value.products == null) return@LazyColumn
        items(shoppingCartResult.value.products!!) { photo ->
            ProductItemContainer(photo, navController, viewModel)
        }
    }
...
