...
}


@Composable
private fun CategorySections(mainResult: State<MainUiState>, navController: NavController) {
    LazyColumn(
        modifier = Modifier.fillMaxSize().testTag("MainColumn"),
    ) {
        if(mainResult.value.categorySectionList == null) return@LazyColumn
        for(cat in mainResult.value.categorySectionList!!){
            when(cat){
                is CategorySection.CategorySectionElectronics -> {
                    item {
...
