...
    }

    Box(
        contentAlignment = Alignment.BottomCenter,
        modifier = Modifier.fillMaxHeight()
    ) {
        CartCard(
            null,
            productDetailsUiState.value.product?.toProductDetails(),
            {   productDetailsUiState.value.product?.toProductDetails()
                ?.let { productDetailsViewModel.addToCart(it) } },
            {   productDetailsUiState.value.product?.toProductDetails()
                ?.let { productDetailsViewModel.removeFromCart(it) } }
...
